# changelogs

./: Cargo.toml  README.md  fetch.cmd  generate.cmd  generate_graphql.sh  relnotes.drawio
.run-debug/: run debug.run.xml
src/: collect.rs  github_collect.rs  github_context.rs  github_queries.rs  github_query.rs  main.rs
src/graphql/: .graphqlconfig  draft.graphql  github_queries.graphql  queries.graphql
