[package]
name = "changelogs"
version = "0.0.0"
authors = ["aedm <korteur@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "3.0.0-beta.2"
graphql_client = { version = "0.10.0", features = ["reqwest-blocking"], default-features = false }
serde = "1.0.130"
reqwest = { version = "^0.11", features = ["json", "blocking"] }

#[profile.release]
#lto = true
#panic = 'abort'