[package]
name = "changelogs"
version = "0.0.0"
authors = ["aedm <korteur@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.0.0-beta.4", features = ["std", "derive"], default-features = false }
graphql_client = { version = "0.10.0", features = ["reqwest"], default-features = false }
serde = { version = "1.0.130" }
reqwest = { version = "^0.11", features = ["json"], default-features = false }
tokio = { version = "1.11.0", features = ["macros", "rt-multi-thread"] }

[profile.release]
#lto = true
#panic = 'abort'